prusti/tests/pass/parse/after_expiry_fail.stderr
error: expected `,`
  --> $DIR/after_expiry_fail.rs:10:19
   |
10 | #[after_expiry_if(a)]
   |                   ^

error: expected `,`
  --> $DIR/after_expiry_fail.rs:13:24
   |
13 | #[after_expiry_if(a => a)]
   |                        ^

error: unexpected token
  --> $DIR/after_expiry_fail.rs:16:17
   |
16 | #[pledge(a, a)]
   |           ^

error: aborting due to 3 previous errors

