prusti/tests/pass/parse/after_expiry_fail.rs
// compile-flags: -Zprint-desugared-specs -Zprint-typeckd-specs -Zskip-verify -Zhide-uuids
// normalize-stdout-test: "[a-z0-9]{32}" -> "$(NUM_UUID)"
// normalize-stdout-test: "[a-z0-9]{8}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{12}" -> "$(UUID)"

#![feature(register_tool)]
#![register_tool(prusti)]

use prusti_contracts::*;

#[after_expiry_if(a)]
fn test1() {}

#[after_expiry_if(a => a)]
fn test2() {}

#[pledge(a, a)]
fn test3() {}

fn main() {}
